# mcp-webcam

./: .gitignore  API_ANALYSIS.md  CURSOR_SETUP.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md  STATUS.md  USAGE.md  test_server.sh
src/: lib.rs  main.rs  mcp_server.rs  mcp_server_broken.rs  mcp_server_complex.rs  mcp_server_old.rs  mcp_server_old2.rs  mcp_server_simple.rs  shodan.rs  webcam.rs
